--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [bumpversion]
 current_version = 1.0.1
+commit=True
+tag=True
 
 [metadata]
 name = LRphase
-version = 1.0.0
+version = 1.0.1
 
 [options]
 packages = LRphase
