Name change to pip package

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,8 +11,8 @@ replace = version = {new_version}
 
 [bumpversion:file:VERSION]
 
-[bumpversion:file:./src/LRphase/__init__.py]
+[bumpversion:file:./src/HaplotagLR/__init__.py]
 
-[bumpversion:file:./src/LRphase/cli.py]
+[bumpversion:file:./src/HaplotagLR/cli.py]
 
 [bumpversion:file:./utils/fitErrorModel.py]
