--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@ commit=True
 tag=True
 
 [metadata]
-name = LRphase
+name = HaplotagLR
 version = 1.1.3
 
 [options]
-packages = LRphase
+packages = HaplotagLR
 install_requires = 
 	pysam
 	biopython
@@ -18,4 +18,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts = 
-	main = LRphase:LRphase
+	main = HaplotagLR:HaplotagLR
